[gd_scene load_steps=9 format=2]

[ext_resource path="res://state_machines/state_machine.gd" type="Script" id=1]
[ext_resource path="res://characters/interaction_area.gd" type="Script" id=2]
[ext_resource path="res://characters/character.gd" type="Script" id=3]
[ext_resource path="res://characters/controllers/character_movement_inputs.gd" type="Script" id=4]
[ext_resource path="res://characters/controllers/character_movement_actions.gd" type="Script" id=6]
[ext_resource path="res://characters/default_character_state_machine.tres" type="Resource" id=7]

[sub_resource type="CylinderShape" id=1]

[sub_resource type="SphereShape" id=2]
radius = 5.0

[node name="Character" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 3 )

[node name="GroundCheck" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -0.1, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
_transition_table_resource = ExtResource( 7 )

[node name="Controller" type="Node" parent="."]
script = ExtResource( 1 )

[node name="MovementInputs" type="Node" parent="Controller"]
script = ExtResource( 4 )

[node name="MovementActions" type="Node" parent="Controller"]
script = ExtResource( 6 )

[node name="InteractionArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 14
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="PerceptionArea" type="Area" parent="InteractionArea"]
collision_layer = 0
collision_mask = 14

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea/PerceptionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]

[connection signal="instantiated" from="." to="AnimationTree" method="set_active" binds= [ true ]]
[connection signal="body_entered" from="InteractionArea" to="InteractionArea" method="_on_body_entered_interaction_area"]
[connection signal="body_exited" from="InteractionArea" to="InteractionArea" method="_on_body_exited_interaction_area"]
[connection signal="body_entered" from="InteractionArea/PerceptionArea" to="InteractionArea" method="_on_body_entered_perception_area"]
[connection signal="body_exited" from="InteractionArea/PerceptionArea" to="InteractionArea" method="_on_body_exited_perception_area"]
